--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = ["flit_core >=3.2,<4"]
 [project]
 name = "ulysses-senteval"
 version = "0.1.0"
-description = "TODO"
+description = "Evaluate sentence models in Brazilian legal tasks."
 authors = [
     {name="felsiq", email= "felipe.siqueira@usp.br"}
 ]
